// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aria-disabled is set to true and tabIndex to -1 if component is not a button and is disabled 1`] = `
<Button
  component="a"
  isDisabled={true}
>
  <a
    aria-disabled={true}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-disabled"
    data-ouia-component-id="OUIA-Generated-Button-primary-12"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={null}
    tabIndex={-1}
    type={null}
  >
    Disabled Anchor Button
  </a>
</Button>
`;

exports[`control button 1`] = `
<Button
  aria-label="control"
  variant="control"
>
  <button
    aria-disabled={false}
    aria-label="control"
    className="pf-c-button pf-m-control"
    data-ouia-component-id="OUIA-Generated-Button-control-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    control
     Button
  </button>
</Button>
`;

exports[`danger button 1`] = `
<Button
  aria-label="danger"
  variant="danger"
>
  <button
    aria-disabled={false}
    aria-label="danger"
    className="pf-c-button pf-m-danger"
    data-ouia-component-id="OUIA-Generated-Button-danger-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    danger
     Button
  </button>
</Button>
`;

exports[`warning button 1`] = `
<Button
  aria-label="warning"
  variant="warning"
>
  <button
    aria-disabled={false}
    aria-label="warning"
    className="pf-c-button pf-m-warning"
    data-ouia-component-id="OUIA-Generated-Button-warning-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    warning
     Button
  </button>
</Button>
`;

exports[`isAriaDisabled button 1`] = `
<Button
  isAriaDisabled={true}
>
  <button
    aria-disabled={true}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-aria-disabled"
    data-ouia-component-id="OUIA-Generated-Button-primary-5"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    type="button"
  >
    Disabled yet focusable button
  </button>
</Button>
`;

exports[`isAriaDisabled link button 1`] = `
<Button
  component="a"
  isAriaDisabled={true}
>
  <a
    aria-disabled={true}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-aria-disabled"
    data-ouia-component-id="OUIA-Generated-Button-primary-6"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={null}
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={null}
    type={null}
  >
    Disabled yet focusable button
  </a>
</Button>
`;

exports[`isBlock 1`] = `
<Button
  isBlock={true}
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-block"
    data-ouia-component-id="OUIA-Generated-Button-primary-3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    Block Button
  </button>
</Button>
`;

exports[`isDisabled 1`] = `
<Button
  isDisabled={true}
>
  <button
    aria-disabled={true}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-disabled"
    data-ouia-component-id="OUIA-Generated-Button-primary-4"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={true}
    tabIndex={null}
    type="button"
  >
    Disabled Button
  </button>
</Button>
`;

exports[`isInline 1`] = `
<Button
  isInline={true}
  variant="link"
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-link pf-m-inline"
    data-ouia-component-id="OUIA-Generated-Button-link-3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    Hovered Button
  </button>
</Button>
`;

exports[`isLarge 1`] = `
<Button
  isLarge={true}
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-display-lg"
    data-ouia-component-id="OUIA-Generated-Button-primary-8"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    Large Button
  </button>
</Button>
`;

exports[`isLoading 1`] = `
<Button
  isLoading={true}
  spinnerAriaValueText="Loading"
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-progress pf-m-in-progress"
    data-ouia-component-id="OUIA-Generated-Button-primary-9"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    <span
      className="pf-c-button__progress"
    >
      <Spinner
        aria-valuetext="Loading"
        size="md"
      >
        <span
          aria-valuetext="Loading"
          className="pf-c-spinner pf-m-md"
          role="progressbar"
        >
          <span
            className="pf-c-spinner__clipper"
          />
          <span
            className="pf-c-spinner__lead-ball"
          />
          <span
            className="pf-c-spinner__tail-ball"
          />
        </span>
      </Spinner>
    </span>
    Loading Button
  </button>
</Button>
`;

exports[`isSmall 1`] = `
<Button
  isSmall={true}
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-primary pf-m-small"
    data-ouia-component-id="OUIA-Generated-Button-primary-7"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    Small Button
  </button>
</Button>
`;

exports[`link button 1`] = `
<Button
  aria-label="link"
  variant="link"
>
  <button
    aria-disabled={false}
    aria-label="link"
    className="pf-c-button pf-m-link"
    data-ouia-component-id="OUIA-Generated-Button-link-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    link
     Button
  </button>
</Button>
`;

exports[`link with icon 1`] = `
<Button
  icon={
    <CartArrowDownIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
  variant="link"
>
  <button
    aria-disabled={false}
    aria-label={null}
    className="pf-c-button pf-m-link"
    data-ouia-component-id="OUIA-Generated-Button-link-2"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    <span
      className="pf-c-button__icon pf-m-start"
    >
      <CartArrowDownIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 576 512"
          width="1em"
        >
          <path
            d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM403.029 192H360v-60c0-6.627-5.373-12-12-12h-24c-6.627 0-12 5.373-12 12v60h-43.029c-10.691 0-16.045 12.926-8.485 20.485l67.029 67.029c4.686 4.686 12.284 4.686 16.971 0l67.029-67.029c7.559-7.559 2.205-20.485-8.486-20.485z"
          />
        </svg>
      </CartArrowDownIcon>
    </span>
    Block Button
  </button>
</Button>
`;

exports[`plain button 1`] = `
<Button
  aria-label="plain"
  variant="plain"
>
  <button
    aria-disabled={false}
    aria-label="plain"
    className="pf-c-button pf-m-plain"
    data-ouia-component-id="OUIA-Generated-Button-plain-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    plain
     Button
  </button>
</Button>
`;

exports[`primary button 1`] = `
<Button
  aria-label="primary"
  variant="primary"
>
  <button
    aria-disabled={false}
    aria-label="primary"
    className="pf-c-button pf-m-primary"
    data-ouia-component-id="OUIA-Generated-Button-primary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    primary
     Button
  </button>
</Button>
`;

exports[`secondary button 1`] = `
<Button
  aria-label="secondary"
  variant="secondary"
>
  <button
    aria-disabled={false}
    aria-label="secondary"
    className="pf-c-button pf-m-secondary"
    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    secondary
     Button
  </button>
</Button>
`;

exports[`tertiary button 1`] = `
<Button
  aria-label="tertiary"
  variant="tertiary"
>
  <button
    aria-disabled={false}
    aria-label="tertiary"
    className="pf-c-button pf-m-tertiary"
    data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe={true}
    disabled={false}
    type="button"
  >
    tertiary
     Button
  </button>
</Button>
`;
